--- a/Assets/_Scripts/Core.asmdef
+++ b/Assets/_Scripts/Core.asmdef
@@ -8,7 +8,8 @@
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:f24cf67903b27ae498b3069ecc30cc11",
         "GUID:80120b1292c15624a97f2c7983a70cea",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
